--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "pillow_heif",
     "safetensors",
     "uvicorn",
-    "moviepy==1.0.3",
+    "moviepy",
     "typer>=0.9.0",
     "pycolmap",
 ]
