chore: 移除大文件到 .gitignore
- weights/model.safetensors (6.3GB)
- weights/dino_salad.ckpt (336MB)
- assets/images/demo320-2.gif (18MB)
- assets/examples/robot_unitree.mp4 (2MB)

这些大文件已添加到 .gitignore，本地文件保留

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ temp*.png
 
 *.png
 /output 
+
+# 大文件权重和模型
+weights/model.safetensors
+weights/dino_salad.ckpt
+
+# 大型视频和图片
+assets/images/demo320-2.gif
+assets/examples/robot_unitree.mp4
